src/main/java/org/example/demo_ssr_v1_1/_core/errors/exception/Exception403.java
package org.example.demo_ssr_v1_1._core.errors.exception;

public class Exception403 extends RuntimeException {
    public Exception403(String message) {
        super(message);
    }
}
